--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "opn": "^5.1.0",
     "pad": "^2.0.3",
     "semistandard": "^12.0.0",
-    "shelljs": "^0.7.8"
+    "shelljs": "^0.7.8",
+    "find-up": "^3.0.0",
+    "yamljs": "^0.3.0"
   },
   "bin": {
     "git-cherry-fixer": "index.js",
